<resources>
    <string name="app_name" translatable="false">GlamVibe Admin</string>
    <string name="authorization_textview">Enter login and password</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="authorization_button">Sign in</string>
    <string name="avatar_content_description">Profile photo</string>
    <string name="exit">Exit</string>
    <string name="exit_content_description">Exit</string>
    <string name="arrow_forward_content_description">Arrow forward</string>
    <string name="profile">My data</string>
    <string name="add_button_description">Add appointment</string>
    <string name="main_menu">Appointments</string>
    <string name="profile_menu">Profile</string>
    <string name="favourites_menu">Favourites</string>
    <string name="catalog_menu">Catalog</string>
    <string name="registration_button">Sign up</string>
    <string name="form_content_description">Form</string>
    <string name="appointments">Appointments</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="snackbar_action_text">Repeat</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_name">Name</string>
    <string name="hint_patronymic">Patronymic</string>
    <string name="hint_birth_date">Birth date</string>
    <string name="hint_email" translatable="false">Email <font color="#FF0000">*</font></string>
    <string name="hint_phone">Phone</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="edit_profile_data_button">Edit</string>
    <string name="save_changes_profile_data_button">Save changes</string>
    <string name="profile_personal_data_textview">Personal data</string>
    <string name="profile_contact_data_textview">Contact data</string>
    <string name="profile_credentials_textview">Credentials</string>
    <string name="change_profile_credentials_textview">Enter a new login or password if you want to change them.</string>
    <string name="registration_title">Registration</string>
    <string name="registration_button_text">Registrate</string>
    <string name="hint_login_registration">Login</string>
    <string name="hint_password_registration">Password</string>
    <string name="registration_form_textview">Form</string>
    <string name="complete_registration_form_textview">If you wish, you can fill out a form that will be used to select recommendations.</string>
    <string name="form_skin_type_textview">1. Skin type</string>
    <string name="form_hair_type_textview">2. Hair type</string>
    <string name="form_skin_type_oily">Oily</string>
    <string name="form_skin_type_dry">Dry</string>
    <string name="form_skin_type_normal">Normal</string>
    <string name="form_skin_type_combination">Combination</string>
    <string name="form_hair_type_normal">Normal</string>
    <string name="form_hair_type_dry">Dry</string>
    <string name="form_hair_type_oily">Oily</string>
    <string name="form_hair_type_colored">Colored</string>
    <string name="form_hair_type_damaged">Damaged</string>
    <string name="form_upcoming_events_textview">3. Upcoming events</string>
    <string name="form_upcoming_events_wedding">Wedding</string>
    <string name="form_upcoming_events_holiday">Holiday</string>
    <string name="form_upcoming_events_photoshoot">Photoshoot</string>
    <string name="app_logo_content_description">App logo</string>
    <string name="title_services_list">Services</string>
    <string name="title_masters_list">Masters</string>
    <string name="service_image_content_description">Service image</string>
    <string name="master_photo_content_description">Photo of the master</string>
    <string name="ruble_content_description">Rubles</string>
    <string name="time_content_description">Minutes</string>
    <string name="service_favourite_content_description">Is favourite</string>
    <string name="promotion_circle_content_description">Promotion icon</string>
    <string name="title_catalog">Catalog</string>
    <string name="catalog_services_textview">Choose category</string>
    <string name="main_page_title">Appointments</string>
    <string name="catalog_title">Catalog</string>
    <string name="service_information_title">Information about service</string>
    <string name="catalog_services_title">Catalog of services</string>
    <string name="catalog_masters_title">Catalog of masters</string>
    <string name="profile_title">My profile</string>
    <string name="profile_data_title">Profile data</string>
    <string name="favourites_title">Favourites</string>
    <string name="appointments_title">My appointments</string>
    <string name="promotion_information_title">Information about promotion</string>
    <string name="new_appointment_title">New appointment</string>
    <string name="favourites_make_appointment_button">Appointment</string>
    <string name="master_information_title">Information about master</string>
    <string name="master_image_content_description">Master photo</string>
    <string name="current_appointments_title">Current appointments</string>
    <string name="no_current_appointments_title">You don\'t have any current appointments.</string>
    <string name="last_appointments_title">Last appointments</string>
    <string name="no_last_appointments_title">You don\'t have last appointments.</string>
    <string name="status_icon_content_description">Status icon</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="menu_icon_content_description">Menu icon</string>
    <string name="comment">Комментарий</string>
    <string name="cancel_reason_text">Are you sure you want to cancel the client\'s appointment?</string>
    <string name="reason_text">Enter the reason for cancellation</string>
    <string name="ok_button">Yes</string>
    <string name="exit_button">No</string>
    <string name="reschedule_appointment_title">Выберите новую дату и время записи</string>
    <string name="reschedule_button">Перенести запись</string>
    <string name="service_appointment_title">Услуга:</string>
    <string name="reschedule_appointment_fragment">Rescheduling the appointment</string>
    <string name="available_time_title">Available times</string>
    <string name="no_available_time_title">В выбранный день нет доступных часов для записи</string>
    <string name="make_appointment_button">Make an appointment</string>
    <string name="make_appointment_service_title">Выберите услугу</string>
    <string name="make_appointment_master_title">Выберите мастера</string>
    <string name="make_appointment_datetime_title">Выберите дату и время записи</string>
    <string name="suggestions_title">Предложения для вас</string>
    <string name="promotions_title">Акции</string>
    <string name="promotion_services_title">Услуги</string>
    <string name="complete">Complete</string>
    <string name="master_content_description">Мастер</string>
    <string name="client_content_description">Клиент</string>
    <string name="make_appointment_client_title">1. Client</string>
    <string name="hint_service_name">Service name</string>
    <string name="hint_service_duration">Duration</string>
    <string name="hint_service_price">Price</string>
    <string name="hint_service_description">Description</string>
    <string name="save_button_text">Save</string>
    <string name="new_service_title">New service</string>
    <string name="edit_service_title">Edit service</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="birth_date_text">Дата рождения:</string>
    <string name="phone_text">Телефон:</string>
    <string name="date_of_employment_text">Дата приема на работу:</string>
    <string name="master_schedule_text">График работы</string>
    <string name="hint_master_name">Имя</string>
    <string name="hint_master_lastname">Фамилия</string>
    <string name="hint_master_patronymic">Отчество</string>
    <string name="hint_master_birth_date">Дата рождения</string>
    <string name="hint_master_email">Email</string>
    <string name="hint_master_phone">Телефон</string>
    <string name="hint_master_date_of_employment">Дата приема на работу</string>
    <string name="hint_master_specialty">Специальность</string>
    <string name="master_categories_textview">Категории</string>
    <string name="hint_master_work_experience">Опыт работы</string>
    <string name="hh_mm">HH:mm</string>
    <string name="edit_master_title">Редактировать мастера</string>
    <string name="new_master_title">Добавить мастера</string>
    <string name="email_text">Email</string>
    <string name="hint_search_clients">Введите ФИО клиента</string>
    <string name="clients_title">Клиенты</string>
    <string name="client_appointments_title">Записи клиента</string>
    <string name="title_clients_list">Клиенты</string>
    <string name="title_promotions_list">Акции</string>
    <string name="main_menu_title">Main menu</string>
    <string name="promotion_image_content_description">Изображение акции</string>
    <string name="hint_promotion_name">Название акции</string>
    <string name="hint_promotion_start_date">Дата начала акции</string>
    <string name="hint_promotion_end_date">Дата окончания акции</string>
    <string name="hint_promotion_description">Описание акции</string>
    <string name="promotion_services_text">Услуги</string>
    <string name="price">Цена</string>
    <string name="rub">руб</string>
    <string name="price_with_promotion">Цена по акции</string>
    <string name="discount">"Скидка: "</string>
    <string name="edit_promotion_title">Редактировать акцию</string>
    <string name="new_promotion_title">Новая акция</string>
</resources>