<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/master_photo"
            android:layout_width="231dp"
            android:layout_height="297dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="114dp"
            android:contentDescription="@string/master_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_photo_background"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/master_image_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/service_image_content_description"
            app:layout_constraintBottom_toBottomOf="@id/master_photo"
            app:layout_constraintEnd_toEndOf="@id/master_photo"
            app:layout_constraintStart_toStartOf="@id/master_photo"
            app:layout_constraintTop_toTopOf="@id/master_photo"
            app:srcCompat="@drawable/outline_add_photo_alternate_24"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/master_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_lastname"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastname_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_name"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patronymic_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patronymic_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_patronymic"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birth_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patronymic_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birth_date_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_birth_date"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_date_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_phone"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_of_employment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_employment_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_date_of_employment"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/specialty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_of_employment_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialty_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_specialty"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/work_experience_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@color/champagne"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/specialty_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/work_experience_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:hint="@string/hint_master_work_experience"
                android:inputType="number"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/master_categories_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/master_categories_textview"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/work_experience_layout" />

        <LinearLayout
            android:id="@+id/categories_checkboxes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/master_categories_text" />

        <TextView
            android:id="@+id/master_schedule_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/master_schedule_text"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_checkboxes_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/master_schedule_textview"
            tools:itemCount="7"
            tools:listitem="@layout/card_edit_working_day" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/mauve"
            android:fontFamily="@font/raleway"
            android:text="@string/save_button_text"
            android:textColor="@color/ivory"
            android:textSize="17sp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>